--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,9 @@ pydantic==2.5.0
 pydantic-settings==2.1.0
 python-dotenv==1.0.0
 
-# Ollama client
+# LLMs
 ollama==0.1.6
+groq==0.4.1
 
 # Vector DB
 pinecone-client==3.0.0
